password and interest parts added

--- a/client/src/components/professional/professional.css
+++ b/client/src/components/professional/professional.css
@@ -1,4 +1,4 @@
-.professional-container {
+.professional-container .password-container {
     display: flex;
     flex-direction: column;
     height: auto;
