about and links backend done

--- a/client/src/components/about/about.css
+++ b/client/src/components/about/about.css
@@ -68,6 +68,15 @@
     width: 100%;
 }
 
+.pen-container {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    width: auto;
+    height: 100%;
+}
+
+
 @media screen and (max-width: 500px) {
     .left-header {
         font-size: 14px;
