--- a/client/src/components/web/web.css
+++ b/client/src/components/web/web.css
@@ -83,3 +83,11 @@
     line-height: 1.5;
     width: 100%;
 }
+
+.pen-container {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    width: auto;
+    height: 100%;
+}
