--- a/client/src/components/professional/professional.css
+++ b/client/src/components/professional/professional.css
@@ -73,3 +73,27 @@
     line-height: 1.5;
     width: 100%;
 }
+
+.dropdown{
+    border-radius: 8px;
+    /* display: flex; */
+    flex-direction: column;
+    left: 0;
+    margin-top: 5px;
+    /* position: absolute; */
+    top: 100%;
+    width: 100%;
+    z-index: 10;
+}
+
+.option-block{
+    padding: 5px;
+    /* align-items: center; */
+    border-radius: 5px;
+    cursor: pointer;
+    /* display: flex; */
+    font-weight: 550;
+    /* height: 80px; */
+    padding: 5px 10px;
+    /* transition: .15s ease; */
+}
