--- a/client/src/components/professional/professional.css
+++ b/client/src/components/professional/professional.css
@@ -58,7 +58,7 @@
 }
 
 .input-link {
-    background-color: #fff;
+    background-color: white;
     border-radius: 8px;
     display: flex;
     margin-top: 4px;
