--- a/client/src/app.css
+++ b/client/src/app.css
@@ -1,4 +1,4 @@
-.information-container{
+.information-container {
     background-color: #F2F5F3;
     display: flex;
     flex-direction: column;
@@ -7,17 +7,16 @@
     width: 100%;
 }
 
-.hr{
-    background-color: rgba(10,30,50,.1);
+.hr {
+    background-color: rgba(10, 30, 50, .1);
     height: 1px;
     border-radius: 0.5px;
     margin: 1.5rem 0 1rem;
     width: 100%;
 }
 
-
-@media screen and (max-width: 1200px) and (min-width: 500px){
-    .information-container{
+@media screen and (max-width: 1200px) and (min-width: 500px) {
+    .information-container {
         padding-top: 110px;
         padding-left: 20px;
         padding-right: 20px;
@@ -25,7 +24,7 @@
 }
 
 @media screen and (max-width: 500px) {
-    .information-container{
+    .information-container {
         padding-top: 90px;
         padding-left: 15px;
         padding-right: 15px;
