--- a/client/src/components/map/map.css
+++ b/client/src/components/map/map.css
@@ -4,6 +4,29 @@
     padding: 0;
 }
 
+.map-container {
+    display: flex;
+    gap: 1rem;
+    padding-top: 6px;
+    flex-direction: column;
+    width: 100%;
+    height: auto;
+}
+
+.header_container {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    /* width: 100%; */
+}
+
+.left-header {
+    color: #2c3d4f;
+    font-weight: 700;
+    font-size: 16px;
+    text-transform: uppercase;
+}
+
 .map-grid {
     display: flex;
     justify-content: center;
